rapt-2.8.3:
- Minor modification for the oscar-packager support: add a "make rpm" command
(which only displays a message).
- Improve the man page.

rapt-2.8.2:
- Fix a bug when specifying the architecture for bootstrapping (introduced
during the last release).

rapt-2.8.1:
- Fix a bug in get_debootstrap_mirror_and_codename: bad return code check when
searching for a specific repositories in configuration files.
- Fix a bug when specifying the architecture (we were not always translating 
"x86_64" to "amd64").

rapt-2.8:
- Fix the codename detection for Ubuntu (detect gutsy and hardy).
- Implement a correct usage of debootstrap, it previously worked only with
Etch.
- Include the capability of specifying the distro ID, which allows users to
not have to specify all other details (such as repositories). It also
simplifies the distro bootstrapping.

rapt-2.7:
- Bug fix when searching packages or querying information about packages.

rapt-2.6:
- Bug fix: the return code should now be correct all the time.

rapt-2.5:
- Bug fix (#490): repo's meta-data are regenerated even when they already
exist.

rapt-2.4
- Bug fix: rapt does not exist if the repos architecture cannot be detacted
(which is often the case with Debian systems when all OSCAR repos are online
repos).
- Minor modifications of RAPT output.
- Enable the usage of distro_query when distro_query is installed in
(/usr/bin).

rapt-2.3
- Include the Ubuntu support.

rapt-2.2
- Bug fixes.
- Manpage improvement.

rapt-2.1
- Switch back to apt-get instead of aptitude (keyring problems).
- When detecting repositories architecture, skip online repositories.
- When using multiple repositories, the list of repos is correctly build
internaly (bug #455).
- Improve the error handling. This fixes bug #458.
- Correctly deal with the different repo location notation (i.e., the location
can start by http|ftp, file:, or even be an absolute path).
- Automatically detect the mirror that can be used by debootstrap (when